added projects page content

--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,9 @@
         <title>Contact</title>
         <link rel="stylesheet" href="/css/style.css">
         <!-- Google Fonts -->
-        <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Poppins&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Winky+Rough:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
 
         <!-- Font Awesome Icons -->
         <script src="https://kit.fontawesome.com/05144ef2e7.js" crossorigin="anonymous"></script>
@@ -27,8 +29,8 @@
 <body>
     <div class="container">
         <h1 class="text-center mt-5">Hello World!_</h1>
-        <hr style="color: blueviolet;">
-        <hr style="height: 15px; color: plum;">
+        <hr style="width: 40%; color: blueviolet">
+        <hr style="color: plum;">
         <hr style="color: blueviolet;">
         <hr style="color: blueviolet;">
         <hr style="color: plum;">
