added the python project

--- a/projects.html
+++ b/projects.html
@@ -30,7 +30,7 @@
     <div class="container">
         <h1>Projects</h1>
 
-        <div class="row">
+        <div class="row mb-5">
             <div class="col-6">
                 <h2>Weather Search App</h2>
                 <p>Lorem ipsum</p>
@@ -53,7 +53,7 @@
             </div>
         </div>
 
-        <div class="row">
+        <div class="row mb-5">
             <div class="col-6">
                 <h2>Appointment Management System</h2>
                 <p>Lorem ipsum</p>
@@ -72,7 +72,7 @@
             </div>
         </div>
 
-        <div class="row">
+        <div class="row mb-5">
             <div class="col-6">
                 <h2>To-Do List App</h2>
                 <p>Lorem ipsum</p>
@@ -94,6 +94,25 @@
                 <img src="images/to-do-desktop.png" alt="" class="img-fluid">
             </div>
         </div>
+
+        <div class="row mb-5">
+            <div class="col-6">
+                <h2>Command Line Based Hangman App</h2>
+                <p>Lorem ipsum</p>
+                <div class="stack">
+                    <p>Python</p>
+                </div>
+                <div class="btn-branding-contact">
+                    <a href="https/nb-todo-app.netlify.app/">Github</a>
+                </div>
+            </div>
+
+            <div class="col-6">
+                <img src="images/to-do-mobile.png" alt="" class="img-fluid">
+                <img src="images/to-do-desktop.png" alt="" class="img-fluid">
+            </div>
+        </div>
+
     </div>
     
 </body>
