added the about section content plus the profile img

--- a/about.html
+++ b/about.html
@@ -27,6 +27,19 @@
 </script>
 </head>
 <body>
+    <div class="container">
+        <h1>About Me</h1>
+        <div class="row mb-5">
+            <div class="col-6">
+                <h1>Nobukho Boyce</h1>
+                <h4>Software Engineer</h4>
+                <p>Lorem ipsum</p>
+            </div>
+            <div class="col-6">
+                <img src="images/profile.jpeg" alt="" class="img-fluid">
+            </div>
+        </div>
+    </div>
     
 </body>
 </html>
