added skills section

--- a/about.html
+++ b/about.html
@@ -39,6 +39,17 @@
                 <img src="images/profile.jpeg" alt="" class="img-fluid">
             </div>
         </div>
+
+        <div class="skills-container">
+            <h2>Skills</h2>
+            <ul>
+                <li>Java</li>
+                <li>Python</li>
+                <li>JavaScript</li>
+                <li>Web Development</li>
+                <li>AWS Cloud Computing</li>
+            </ul>
+        </div>
     </div>
     
 </body>
