added the certifications section

--- a/about.html
+++ b/about.html
@@ -49,6 +49,34 @@
                 <li>Web Development</li>
                 <li>AWS Cloud Computing</li>
             </ul>
+            <div>
+                <a class="btn-branding-contact" href="/projects.html">Projects</a>
+            </div>
+        </div>
+
+        <div class="certifications">
+            <div class="row">
+            <div class="col-3">
+                <h4>AWS Cloud Practitioner</h4>
+                <img src="#" alt="" class="img-fluid">
+                <a href="#">View here</a>
+            </div>
+            <div class="col-3">
+                <h4>SheCodes Responsive</h4>
+                <img src="#" alt="" class="img-fluid">
+                <a href="#">View here</a>
+            </div>
+            <div class="col-3">
+                <h4>SheCodes Plus</h4>
+                <img src="#" alt="" class="img-fluid">
+                <a href="#">View here</a>
+            </div>
+            <div class="col-3">
+                <h4>SheCodes Basics</h4>
+                <img src="#" alt="" class="img-fluid">
+                <a href="#">View here</a>
+            </div>
+        </div>
         </div>
     </div>
     
