--- a/about.html
+++ b/about.html
@@ -40,13 +40,24 @@
             </div>
         </div>
 
-        <div class="skills-container">
-            <h2>Skills</h2>
+        <div class="skills-container mb-5">
+            <h2>Programming Languages</h2>
             <ul>
                 <li>Java</li>
                 <li>Python</li>
                 <li>JavaScript</li>
+            </ul>
+            <h2>Skills</h2>
+            <ul>
+                <li>Back-end Development</li>
+                <li>SQL and Database Optimization</li>
+                <li>Api Integration</li>
+                <li>Github</li>
+                <li>CI/CD Pipeline</li>
+                <li>Postgres</li>
+                <li>Springboot</li>
                 <li>Web Development</li>
+                <li>Testing</li>
                 <li>AWS Cloud Computing</li>
             </ul>
             <div>
