--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Nobukho Boyce's Portfolio" />
     <meta name="keywords" content="Nobukho Boyce, Portfolio, Front-end Developer, Website Portfolio, Projects, About, Contact" />
-    <title>Contact</title>
+    <title>About Nobukho/title>
     <link rel="stylesheet" href="/css/style.css">
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
