--- a/home.html
+++ b/home.html
@@ -6,6 +6,15 @@
     <title>Home</title>
 </head>
 <body>
+    <nav class="nav-bar">
+        <img src="#" alt="logo" class="img-fluid">
+        <div class="nav-links d-flex justify-content-between">
+        <a href="/home.html">Home</a>
+        <a href="/about.html">About</a>
+        <a href="/projects.html">Projects</a>
+        <a href="/contact.html">Contact</a>
+        </div>
+    </nav>
     
 </body>
 </html>
