added navigation in the footer

--- a/home.html
+++ b/home.html
@@ -38,7 +38,7 @@
             </div>
         </nav>
 
-        <div class="greeting">
+        <div class="greeting mb-5">
             <h1  class="text-center">Nobukho Boyce</h1>
             <hr>
             <p class="text-center">a software engineer</p>
@@ -46,9 +46,40 @@
             <hr>
             <p class="text-center">based in Cape Town</p>
             <hr><hr>
+            <a class="btn-branding-contact" href="#">Resume</a>
         </div>
 
-        <a class="btn-branding-contact" href="#">Resume</a>
+        
+
+        <footer>
+            <div class="footer-container">
+                <div class="row">
+                    <div class="socials col-3">
+                        <p>nboyce</p>
+                        <i class="fa-brands fa-github"></i>
+                        <i class="fa-brands fa-linkedin"></i>
+                    </div>
+
+                    <div class="about-links col-3">
+                        <ul>about
+                            <li><a href="/about.html">profile</a></li>
+                            <li><a href="/about.html#skills-container">skills</a></li>
+                            <li><a href="/about.html#certifications">certificates</a></li>
+                        </ul>
+                    </div>
+
+                    <div class="projects-links col-3">
+                        <ul>projects
+                            <li><a href="/projects.html#">weather app</search></a></li>
+                            <li><a href="/projects.html">hangman</a></li>
+                            <li><a href="/projects.html">appointment management system</a></li>
+                            <li><a href="/projects.html">to-do</a></li>
+                        </ul>
+                    </div>
+
+                </div>
+            </div>
+        </footer>
     </div>
 </body>
 </html>
