finished the structure of th e picture

--- a/home.html
+++ b/home.html
@@ -28,7 +28,7 @@
 </head>
 <body>
     <div class="container border rounded p-5">
-        <nav class="nav-bar">
+        <nav class="nav-bar mb-5">
             <div class="nav-links d-flex justify-content-between">
                 <img src="#" alt="logo" class="img-fluid">
             <a href="/home.html">Home</a>
@@ -65,10 +65,11 @@
                             <li><a href="/about.html">profile</a></li>
                             <li><a href="/about.html#skills-container">skills</a></li>
                             <li><a href="/about.html#certifications">certificates</a></li>
+                            <li><a href="/contact.html">contact</a></li>
                         </ul>
                     </div>
 
-                    <div class="projects-links col-3">
+                    <div class="projects-links col-6">
                         <ul>projects
                             <li><a href="/projects.html#">weather app</search></a></li>
                             <li><a href="/projects.html">hangman</a></li>
