--- a/about.html
+++ b/about.html
@@ -28,6 +28,15 @@
 </head>
 <body>
     <div class="container">
+        <nav class="nav-bar mb-5">
+            <div class="nav-links d-flex justify-content-between">
+                <img src="#" alt="logo" class="img-fluid">
+            <a href="/home.html">Home</a>
+            <a href="/about.html">About</a>
+            <a href="/projects.html">Projects</a>
+            <a href="/contact.html">Contact</a>
+            </div>
+        </nav>
         <h1>About Me</h1>
         <div class="row mb-5">
             <div class="col-6">
