added a nav bar to contact page

--- a/contact.html
+++ b/contact.html
@@ -28,6 +28,16 @@
 </head>
 <body>
     <div class="container">
+        <nav class="nav-bar mb-5">
+            <div class="nav-links d-flex justify-content-between">
+                <img src="#" alt="logo" class="img-fluid">
+            <a href="/home.html">Home</a>
+            <a href="/about.html">About</a>
+            <a href="/projects.html">Projects</a>
+            <a href="/contact.html">Contact</a>
+            </div>
+        </nav>
+        
         <h1 class="text-center mt-5">Hello World!_</h1>
         <hr style="width: 40%; color: blueviolet">
         <hr style="color: plum;">
