changed color of the links

--- a/home.html
+++ b/home.html
@@ -6,7 +6,6 @@
     <meta name="description" content="Nobukho Boyce's Portfolio" />
     <meta name="keywords" content="Nobukho Boyce, Portfolio, Front-end Developer, Website Portfolio, Projects, About, Contact" />
     <title>Home</title>
-    <link rel="stylesheet" href="/css/style.css">
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -25,16 +24,17 @@
     integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
     crossorigin="anonymous">
 </script>
+<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="container border rounded p-5">
         <nav class="nav-bar mb-5">
             <div class="nav-links d-flex justify-content-between">
                 <img src="#" alt="logo" class="img-fluid">
-            <a href="/home.html">Home</a>
-            <a href="/about.html">About</a>
-            <a href="/projects.html">Projects</a>
-            <a href="/contact.html">Contact</a>
+            <a class="nav-link" href="/home.html">Home</a>
+            <a class="nav-link" href="/about.html">About</a>
+            <a class="nav-link" href="/projects.html">Projects</a>
+            <a class="nav-link" href="/contact.html">Contact</a>
             </div>
         </nav>
 
