--- a/about.html
+++ b/about.html
@@ -42,9 +42,10 @@
             <div class="col-6">
                 <h1>Nobukho Boyce</h1>
                 <h4>Software Engineer</h4>
-                <p>Hi, I'm Nobukho Boyce, an aspiring Software Engineer based in Cape Town, South Africa. I specialize in building 
+                <p>Hi, I'm Nobukho Boyce, an aspiring Software Engineer based in Cape Town, South Africa. I am in building 
                     scalable, full-stack applications using Java, Python, and JavaScript, and have a strong foundation in distributed 
-                    systems and cloud technologies.
+                    systems and cloud technologies. With a unique background in Civil Engineering, I have cultivated skills such as problem problem-solving,
+                    analytical and communication skills, which translated well into my software development journey.
 
                     With hands-on experience building a Java/Spring Boot-based appointment management system, as well as front-end 
                     projects like a weather search app and a to-do list. These projects reflect my ability to learn quickly, work 
@@ -75,6 +76,7 @@
                 <li>Back-end Development</li>
                 <li>SQL and Database Optimization</li>
                 <li>Api Integration</li>
+                <li>Bootstrap</li>
                 <li>Github</li>
                 <li>CI/CD Pipeline</li>
                 <li>Postgres</li>
