moved stlesheet link to the bottom of the header

--- a/home.html
+++ b/home.html
@@ -40,13 +40,14 @@
 
         <div class="greeting mb-5">
             <h1  class="text-center">Nobukho Boyce</h1>
-            <hr>
+            <hr style="color: plum;">
             <p class="text-center">a software engineer</p>
-            <hr>
-            <hr>
+            <hr style="color: blueviolet;">
+            <hr style="color: blueviolet;">
             <p class="text-center">based in Cape Town</p>
-            <hr><hr>
+            <hr style="color: plum;"><hr style="color: blueviolet;">
             <a class="btn-branding-contact" href="#">Resume</a>
+       
         </div>
 
         
