styled the footer

--- a/home.html
+++ b/home.html
@@ -40,29 +40,25 @@
 
         <div class="greeting mb-5">
             <h1  class="text-center">Nobukho Boyce</h1>
-            <hr style="color: plum;">
-            <p class="text-center">a software engineer</p>
-            <hr style="color: blueviolet;">
-            <hr style="color: blueviolet;">
-            <p class="text-center">based in Cape Town</p>
-            <hr style="color: plum;"><hr style="color: blueviolet;">
-            <a class="btn-branding-contact" href="#">Resume</a>
-       
+            <hr style="color: orangered">
+            <p class="text-center">aspiring software engineer</p>
+            <hr style="color: rgb(255, 166, 0);">
+            <hr style="color:orangered;">
+            <a class="btn-branding-contact" href="#">Resume</a> 
         </div>
-
         
 
         <footer>
             <div class="footer-container">
                 <div class="row">
                     <div class="socials col-3">
-                        <p>nboyce</p>
+                        <h6>nboyce</h6>
                         <i class="fa-brands fa-github"></i>
                         <i class="fa-brands fa-linkedin"></i>
                     </div>
 
                     <div class="about-links col-3">
-                        <ul>about
+                        <ul><h6>about</h6>
                             <li><a href="/about.html">profile</a></li>
                             <li><a href="/about.html#skills-container">skills</a></li>
                             <li><a href="/about.html#certifications">certificates</a></li>
@@ -71,7 +67,7 @@
                     </div>
 
                     <div class="projects-links col-6">
-                        <ul>projects
+                        <ul><h6>projects</h6>
                             <li><a href="/projects.html#">weather app</search></a></li>
                             <li><a href="/projects.html">hangman</a></li>
                             <li><a href="/projects.html">appointment management system</a></li>
