redoing the homepage (too empty)

--- a/projects.html
+++ b/projects.html
@@ -50,10 +50,10 @@
                     <p>CSS</p>
                 </div>
                 <div class="btn-branding-contact">
-                    <a href="https/nb-weather-app.netlify.app/">View</a>
+                    <a href="https/nb-weather-app.netlify.app/">View <i class="fa-solid fa-globe"></i></a>
                 </div>
                 <div class="btn-branding-contact">
-                    <a href="https/nb-weather-app.netlify.app/">Github</a>
+                    <a href="https/nb-weather-app.netlify.app/">Github <i class="fa-brands fa-github"></i></a>
                 </div>
             </div>
 
@@ -72,7 +72,7 @@
                     <p>Springboot</p>
                 </div>
                 <div class="btn-branding-contact">
-                    <a href="https/nb-weather-app.netlify.app/">Github</a>
+                    <a href="https/nb-weather-app.netlify.app/">Github <i class="fa-brands fa-github"></i></a>
                 </div>
             </div>
 
@@ -92,10 +92,10 @@
                     <p>CSS</p>
                 </div>
                 <div class="btn-branding-contact">
-                    <a href="https/nb-todo-app.netlify.app/">View</a>
+                    <a href="https/nb-todo-app.netlify.app/">View <i class="fa-solid fa-globe"></i></a>
                 </div>
                 <div class="btn-branding-contact">
-                    <a href="https/nb-todo-app.netlify.app/">Github</a>
+                    <a href="https/nb-todo-app.netlify.app/">Github <i class="fa-brands fa-github"></i></a>
                 </div>
             </div>
 
@@ -113,7 +113,7 @@
                     <p>Python</p>
                 </div>
                 <div class="btn-branding-contact">
-                    <a href="https/nb-todo-app.netlify.app/">Github</a>
+                    <a href="https/nb-todo-app.netlify.app/">Github <i class="fa-brands fa-github"></i></a>
                 </div>
             </div>
 
