redid the nav bar and added a footer

--- a/projects.html
+++ b/projects.html
@@ -29,12 +29,11 @@
 <body>
     <div class="container">
         <nav class="nav-bar mb-5">
-            <div class="nav-links d-flex justify-content-between">
-                <img src="#" alt="logo" class="img-fluid">
-            <a href="/home.html">Home</a>
-            <a href="/about.html">About</a>
-            <a href="/projects.html">Projects</a>
-            <a href="/contact.html">Contact</a>
+            <div class="nav-links d-flex justify-content-end">
+            <a class="btn-branding-outline" href="/home.html">Home</a>
+            <a class="btn-branding-outline" href="/about.html">About</a>
+            <a class="btn-branding-outline" href="/projects.html">Projects</a>
+            <a class="btn-branding-outline" href="/contact.html">Contact</a>
             </div>
         </nav>
         
@@ -124,6 +123,25 @@
         </div>
 
     </div>
+
+    <footer>
+        <div class="footer-container mb-4">
+            <div class="contact-me-box d-block justify-content-between pb-3">
+                    <h2 class="p-2">Contact Me</h2>
+                    <div class="contact-links d-flex justify-content-around">
+                        <div class="email-btn">
+                            <a class="btn-branding-outline" href="mailto:boycenobukho@gmail.com">Email</a>
+                        </div>
+                        <div class="call-btn">
+                            <a class="btn-branding-outline" href="tel:+27781528465">Call</a>
+                        </div> 
+                        <div class="linkedin-btn">
+                            <a class="btn-branding-outline" href="https://www.linkedin.com/nobukho-boyce">Message</a>
+                        </div>
+                    </div>
+                    </div>
+            </div>
+    </footer>
     
 </body>
 </html>
