restructuring the project page

--- a/projects.html
+++ b/projects.html
@@ -40,86 +40,105 @@
         <h1>Projects</h1>
 
         <div class="row mb-5">
-            <div class="col-6">
-                <h2>Weather Search App</h2>
-                <p>Lorem ipsum</p>
-                <div class="stack">
-                    <p>JavaScript</p>
-                    <p>HTML</p>
-                    <p>CSS</p>
+            <div class="col-6 weather-app">
+                <h6 class="text-center">Weather Search App</h6>
+                <p class="project-summary">The app allows users to search for weather information for any city
+                     and displays the current temperature, weather description, humidity,
+                      wind speed, and the time of day.</p>
+                <div class="stack mb-3">
+                    <span style="background:rgb(255, 217, 0); color:black">JavaScript</span>
+                    <span style="background:#1572B6; color:black">CSS</span>
+                    <span  style="background:#E44D26; color:black">HTML</span>
+                </div>  
+                <div>
+                    <img src="images/weather-app-desktop.png" alt="" class="img-fluid">
                 </div>
-                <div class="btn-branding-contact">
-                    <a href="https/nb-weather-app.netlify.app/">View <i class="fa-solid fa-globe"></i></a>
-                </div>
-                <div class="btn-branding-contact">
-                    <a href="https/nb-weather-app.netlify.app/">Github <i class="fa-brands fa-github"></i></a>
-                </div>
+                <div class="project-btns d-flex">
+                    <a class="btn-branding-contact" href="https/nb-weather-app.netlify.app/">View <i class="fa-solid fa-globe"></i></a>
+                    <a class="btn-branding-contact" href="https://github.com/nboyce9/vanilla-weather-search">Github <i class="fa-brands fa-github"></i></a>
+                </div>  
             </div>
 
-            <div class="col-6">
-                <img src="images/weather-app-desktop.png" alt="" class="img-fluid">
-                <img src="images/weather-app-mobile.png" alt="" class="img-fluid">
+            <div class="col-6 AP-system">
+                <h6>Appointment Management System</h6>
+                <p><span>(In progress)</span> A full-stack web application for managing appointments between service providers and clients.
+                     Built with Spring Boot and React.</p>
+                <div class="stack mb-3">
+                    <span style="background: #007396; color:#F89820">Java</span>
+                    <span style="background: #6DB33F; color:#ffff">Springboot</span>
+                </div>
+                <div>
+                    <img src="images/weather-app-desktop.png" alt="" class="img-fluid">
+                </div>
+                <div class="project-btns">
+                    <a class="btn-branding-contact" href="https://github.com/nboyce9/appointment-management-system">Github <i class="fa-brands fa-github"></i></a>
+                </div>
             </div>
         </div>
 
         <div class="row mb-5">
-            <div class="col-6">
-                <h2>Appointment Management System</h2>
-                <p>Lorem ipsum</p>
-                <div class="stack">
-                    <p>Java</p>
-                    <p>Springboot</p>
+            <div class="col-6 to-do-app">
+                <h6 class="text-center">To-Do List App</h6>
+                <p>A simple web application to manage your to-do tasks. Users can add, edit,  
+                    delete and mark tasks.
+                    </p>
+                <div class="stack mb-3">
+                    <span style="background:rgb(255, 217, 0); color:black">JavaScript</span>
+                    <span style="background:#1572B6; color:black">CSS</span>
+                    <span  style="background:#E44D26; color:black">HTML</span>
+                </div>  
+                <div>
+                    <img src="images/to-do-desktop.png" alt="" class="img-fluid">
                 </div>
-                <div class="btn-branding-contact">
-                    <a href="https/nb-weather-app.netlify.app/">Github <i class="fa-brands fa-github"></i></a>
-                </div>
+                <div class="project-btns d-flex">
+                    <a class="btn-branding-contact" href="https/nb-todo-app.netlify.app/">View <i class="fa-solid fa-globe"></i></a>
+                    <a class="btn-branding-contact" href="https://github.com/nboyce9/todo-list-webapp">Github <i class="fa-brands fa-github"></i></a>
+                </div>  
             </div>
 
-            <div class="col-6">
-                <img src="images/weather-app-desktop.png" alt="" class="img-fluid">
-                <img src="images/weather-app-mobile.png" alt="" class="img-fluid">
+            <div class="col-6 hangaman-app">
+                <h6>Hangman Game</h6>
+                <p> A command line based word-guessing game where a player attempts to guess a randomly 
+                    selected word by guessing letters or the entire word.</p>
+                <div class="stack mb-3">
+                    <span style="background: #3776AB; color:#FFD43B">Python</span>
+                </div>
+                <div>
+                    <img src="images/weather-app-desktop.png" alt="" class="img-fluid">
+                </div>
+                <div class="project-btns">
+                    <a class="btn-branding-contact" href="https/nb-weather-app.netlify.app/">Github <i class="fa-brands fa-github"></i></a>
+                </div>
             </div>
         </div>
 
-        <div class="row mb-5">
-            <div class="col-6">
-                <h2>To-Do List App</h2>
-                <p>Lorem ipsum</p>
-                <div class="stack">
-                    <p>JavaScript</p>
-                    <p>HTML</p>
-                    <p>CSS</p>
-                </div>
-                <div class="btn-branding-contact">
-                    <a href="https/nb-todo-app.netlify.app/">View <i class="fa-solid fa-globe"></i></a>
-                </div>
-                <div class="btn-branding-contact">
-                    <a href="https/nb-todo-app.netlify.app/">Github <i class="fa-brands fa-github"></i></a>
-                </div>
+        <div class="certifications">
+            <div class="row">
+            <div class="col-3">
+                <h6>AWS Cloud Practitioner</h6>
+                <img src="#" alt="" class="img-fluid">
+                <a href="#">View here</a>
             </div>
-
-            <div class="col-6">
-                <img src="images/to-do-mobile.png" alt="" class="img-fluid">
-                <img src="images/to-do-desktop.png" alt="" class="img-fluid">
+            <div class="col-3">
+                <h6>SheCodes Responsive</h6>
+                <img src="#" alt="" class="img-fluid">
+                <a href="#">View here</a>
+            </div>
+            <div class="col-3">
+                <h6>SheCodes Plus</h6>
+                <img src="#" alt="" class="img-fluid">
+                <a href="#">View here</a>
+            </div>
+            <div class="col-3">
+                <h6>SheCodes Basics</h6>
+                <img src="#" alt="" class="img-fluid">
+                <a href="#">View here</a>
             </div>
         </div>
+        </div>
 
-        <div class="row mb-5">
-            <div class="col-6">
-                <h2>Command Line Based Hangman App</h2>
-                <p>Lorem ipsum</p>
-                <div class="stack">
-                    <p>Python</p>
-                </div>
-                <div class="btn-branding-contact">
-                    <a href="https/nb-todo-app.netlify.app/">Github <i class="fa-brands fa-github"></i></a>
-                </div>
-            </div>
+        <div class="badges">
 
-            <div class="col-6">
-                <img src="images/to-do-mobile.png" alt="" class="img-fluid">
-                <img src="images/to-do-desktop.png" alt="" class="img-fluid">
-            </div>
         </div>
 
     </div>
