clean-up plus styling

--- a/home.html
+++ b/home.html
@@ -31,24 +31,25 @@
         <nav class="nav-bar mb-5">
             <div class="nav-links d-flex justify-content-end">
             <a class="btn-branding-outline" href="/home.html">Home</a>
-            <a class="btn-branding-outline" href="/about.html">About</a>
+            <a class="btn-branding-outline" href="#about">About</a>
             <a class="btn-branding-outline" href="/projects.html">Projects</a>
-            <a class="btn-branding-outline" href="/contact.html">Contact</a>
+            <a class="btn-branding-outline" href="#contact">Contact</a>
             </div>
         </nav>
         <img class="profile img-fluid" src="images/profile.jpeg" alt="profile">
 
         <div class="greeting mb-5">
-            <h1  class="text-center">Nobukho Boyce</h1>
-            <hr style="color: orangered">
-            <p class="text-center">aspiring software engineer</p>
-            <hr style="color: rgb(255, 166, 0);">
-            <hr style="color:orangered;">
+            <h1  class="text-center mb-2">Nobukho Boyce</h1>
+            <p class="text-center">Software Developer</p>
+            <div class="profile-links">
+                <a class="me-3" href="https://www.linkedin.com/nobukho-boyce"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="https://www.github.com/nboyce9"><i class="fa-brands fa-github"></i></a>
+            </div>
             <a class="btn-branding-contact" href="#">Resume</a> 
         </div>
 
 
-        <div class="about-section">
+        <div class="about-section mt-5" id="about">
             <div class="col">
                 <h2 class="mb-4">About Me</h2>
                 <p>I am an aspiring software engineer with a passion for building scalable,
@@ -120,9 +121,9 @@
         </div>
         
         <footer>
-            <div class="footer-container mb-4">
-                <div class="contact-me-box d-block justify-content-between pb-3">
-                        <h2 class="p-2">Contact Me</h2>
+            <div class="footer-container mt-5">
+                <div class="contact-me-box d-block justify-content-between pb-5">
+                        <h2 id="contact" class="p-4">Contact Me</h2>
                         <div class="contact-links d-flex justify-content-around">
                             <div class="email-btn">
                                 <a class="btn-branding-outline" href="mailto:boycenobukho@gmail.com">Email</a>
