--- a/projects.html
+++ b/projects.html
@@ -31,9 +31,9 @@
         <nav class="nav-bar mb-5">
             <div class="nav-links d-flex justify-content-end">
             <a class="btn-branding-outline" href="/home.html">Home</a>
-            <a class="btn-branding-outline" href="/about.html">About</a>
+            <a class="btn-branding-outline" href="/home.html#about">About</a>
             <a class="btn-branding-outline" href="/projects.html">Projects</a>
-            <a class="btn-branding-outline" href="/contact.html">Contact</a>
+            <a class="btn-branding-outline" href="/home.html#contact">Contact</a>
             </div>
         </nav>
         
@@ -115,23 +115,23 @@
         <div class="certifications mt-4">
             <h1 class="text-center">Certifications</h1>
             <div class="row">
-                <div class="col-6">
+                <div class="col-6 mb-3">
                     <h6>AWS Cloud Practitioner</h6>
                     <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="3dec3b90-e4d4-4c8c-98e6-936afef0b32c" 
                     data-share-badge-host="https://www.credly.com"></div>
                     <script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
                 </div>
-                <div class="col-6">
+                <div class="col-6 mb-3">
                     <h6>SheCodes Responsive</h6>
                     <img src="images/shecodes-rwd.png" alt="shecodes certification"" class="img-fluid">
                 </div>
             </div>
-            <div class="row">
-                <div class="col-6">
+            <div class="row mb-4">
+                <div class="col-6 mb-5">
                     <h6>SheCodes Plus</h6>
                     <img src="images/shecodes-pwd.png" alt="shecodes certification"" class="img-fluid">
                 </div>
-                <div class="col-6">
+                <div class="col-6 mb-5">
                     <h6>SheCodes Basics</h6>
                     <img src="images/shecodes-bic.png" alt="shecodes certification" class="img-fluid">
                 </div>
@@ -141,9 +141,9 @@
 
 
     <footer>
-        <div class="footer-container mb-4">
-            <div class="contact-me-box d-block justify-content-between pb-3">
-                    <h2 class="p-2">Contact Me</h2>
+        <div class="footer-container">
+            <div class="contact-me-box d-block justify-content-between pb-5">
+                    <h2 class="p-4">Contact Me</h2>
                     <div class="contact-links d-flex justify-content-around">
                         <div class="email-btn">
                             <a class="btn-branding-outline" href="mailto:boycenobukho@gmail.com">Email</a>
