aligning some headings

--- a/projects.html
+++ b/projects.html
@@ -59,7 +59,7 @@
                 </div>
     
                 <div class="col project">
-                    <h6>Appointment Management System</h6>
+                    <h6 class="text-center">Appointment Management System</h6>
                     <p><span>(In progress)</span> A full-stack web application for managing appointments between service providers and clients.
                          Built with Spring Boot and React.</p>
                     <div class="stack mb-3">
@@ -97,7 +97,7 @@
             </div>
 
             <div class="col project">
-                <h6>Hangman Game</h6>
+                <h6 class="text-center">Hangman Game</h6>
                 <p> A command line based word-guessing game where a player attempts to guess a randomly 
                     selected word by guessing letters or the entire word.</p>
                 <div class="stack mb-3">
