fixed linkedin link

--- a/home.html
+++ b/home.html
@@ -42,8 +42,8 @@
             <h1  class="text-center mb-2">Nobukho Boyce</h1>
             <p class="text-center">Software Developer</p>
             <div class="profile-links">
-                <a class="me-3" href="https://www.linkedin.com/nobukho-boyce"><i class="fa-brands fa-linkedin"></i></a>
-                <a href="https://www.github.com/nboyce9"><i class="fa-brands fa-github"></i></a>
+                <a class="me-3" href="https://www.linkedin.com/in/nobukho-boyce" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="https://www.github.com/nboyce9" target="_blank"><i class="fa-brands fa-github"></i></a>
             </div>
             <a class="btn-branding-contact" href="#">Resume</a> 
         </div>
@@ -132,7 +132,7 @@
                                 <a class="btn-branding-outline" href="tel:+27781528465">Call</a>
                             </div> 
                             <div class="linkedin-btn">
-                                <a class="btn-branding-outline" href="https://www.linkedin.com/nobukho-boyce">Message</a>
+                                <a class="btn-branding-outline" href="https://www.linkedin.com/in/nobukho-boyce" target="_blank">Message</a>
                             </div>
                         </div>
                         </div>
