--- a/projects.html
+++ b/projects.html
@@ -152,7 +152,7 @@
                             <a class="btn-branding-outline" href="tel:+27781528465">Call</a>
                         </div> 
                         <div class="linkedin-btn">
-                            <a class="btn-branding-outline" href="https://www.linkedin.com/nobukho-boyce">Message</a>
+                            <a class="btn-branding-outline" href="https://www.linkedin.com/in/nobukho-boyce" target="_blank">Message</a>
                         </div>
                     </div>
                     </div>
