--- a/projects.html
+++ b/projects.html
@@ -53,7 +53,7 @@
                         <img src="images/weather-app-desktop.png" alt="" class="img-fluid">
                     </div>
                     <div class="project-btns d-flex">
-                        <a class="btn-branding-contact" href="https://nb-weather-app.netlify.app/">View <i class="fa-solid fa-globe"></i></a>
+                        <a class="btn-branding-contact" href="https://nb-weather-search.netlify.app/">View <i class="fa-solid fa-globe"></i></a>
                         <a class="btn-branding-contact" href="https://github.com/nboyce9/vanilla-weather-search">Github <i class="fa-brands fa-github"></i></a>
                     </div>  
                 </div>
@@ -91,7 +91,7 @@
                     <img src="images/to-do-desktop.png" alt="" class="img-fluid">
                 </div>
                 <div class="project-btns d-flex">
-                    <a class="btn-branding-contact" href="https://nb-todo-app.netlify.app/">View <i class="fa-solid fa-globe"></i></a>
+                    <a class="btn-branding-contact" href="https://nb-to-do.netlify.app/">View <i class="fa-solid fa-globe"></i></a>
                     <a class="btn-branding-contact" href="https://github.com/nboyce9/todo-list-webapp">Github <i class="fa-brands fa-github"></i></a>
                 </div>  
             </div>
