--- a/projects.html
+++ b/projects.html
@@ -53,8 +53,8 @@
                         <img src="images/weather-app-desktop.png" alt="" class="img-fluid">
                     </div>
                     <div class="project-btns d-flex">
-                        <a class="btn-branding-contact" href="https://nb-weather-search.netlify.app/">View <i class="fa-solid fa-globe"></i></a>
-                        <a class="btn-branding-contact" href="https://github.com/nboyce9/vanilla-weather-search">Github <i class="fa-brands fa-github"></i></a>
+                        <a class="btn-branding-contact" href="https://nb-weather-search.netlify.app/" target="_blank">View <i class="fa-solid fa-globe"></i></a>
+                        <a class="btn-branding-contact" href="https://github.com/nboyce9/vanilla-weather-search" target="_blank">Github <i class="fa-brands fa-github"></i></a>
                     </div>  
                 </div>
     
@@ -70,7 +70,7 @@
                         <img src="images/app-mngmnt-sys.png" alt="" class="img-fluid">
                     </div>
                     <div class="project-btns">
-                        <a class="btn-branding-contact" href="https://github.com/nboyce9/appointment-management-system">Github <i class="fa-brands fa-github"></i></a>
+                        <a class="btn-branding-contact" href="https://github.com/nboyce9/appointment-management-system" target="_blank">Github <i class="fa-brands fa-github"></i></a>
                     </div>
                 </div>
             </div>
@@ -91,8 +91,8 @@
                     <img src="images/to-do-desktop.png" alt="" class="img-fluid">
                 </div>
                 <div class="project-btns d-flex">
-                    <a class="btn-branding-contact" href="https://nb-to-do.netlify.app/">View <i class="fa-solid fa-globe"></i></a>
-                    <a class="btn-branding-contact" href="https://github.com/nboyce9/todo-list-webapp">Github <i class="fa-brands fa-github"></i></a>
+                    <a class="btn-branding-contact" href="https://nb-to-do.netlify.app/" target="_blank">View <i class="fa-solid fa-globe"></i></a>
+                    <a class="btn-branding-contact" href="https://github.com/nboyce9/todo-list-webapp" target="_blank">Github <i class="fa-brands fa-github"></i></a>
                 </div>  
             </div>
 
@@ -107,7 +107,7 @@
                     <img src="images/hangman.png" alt="" class="img-fluid">
                 </div>
                 <div class="project-btns">
-                    <a class="btn-branding-contact" href="https://github.com/nboyce9/the-hangman-game">Github <i class="fa-brands fa-github"></i></a>
+                    <a class="btn-branding-contact" href="https://github.com/nboyce9/the-hangman-game" target="_blank">Github <i class="fa-brands fa-github"></i></a>
                 </div>
             </div>
         </div>
