--- a/home.html
+++ b/home.html
@@ -45,7 +45,7 @@
                 <a class="me-3" href="https://www.linkedin.com/in/nobukho-boyce" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
                 <a href="https://www.github.com/nboyce9" target="_blank"><i class="fa-brands fa-github"></i></a>
             </div>
-            <a class="btn-branding-contact" href="#">Resume</a> 
+            <a class="btn-branding-contact" href="files/nobukhoBoyceResume.pdf" download>Resume</a>
         </div>
 
 
