added missing imgs for projects

--- a/projects.html
+++ b/projects.html
@@ -50,7 +50,7 @@
                         <span  style="background:#E44D26; color:black">HTML</span>
                     </div>  
                     <div>
-                        <img src="images/weather-app-desktop.png" alt="" class="img-fluid">
+                        <img src="images/weather-app.png" alt="" class="img-fluid">
                     </div>
                     <div class="project-btns d-flex">
                         <a class="btn-branding-contact" href="https://nb-weather-search.netlify.app/" target="_blank">View <i class="fa-solid fa-globe"></i></a>
@@ -88,7 +88,7 @@
                     <span  style="background:#E44D26; color:black">HTML</span>
                 </div>  
                 <div>
-                    <img src="images/to-do-desktop.png" alt="" class="img-fluid">
+                    <img src="images/to-do-app.png" alt="" class="img-fluid">
                 </div>
                 <div class="project-btns d-flex">
                     <a class="btn-branding-contact" href="https://nb-to-do.netlify.app/" target="_blank">View <i class="fa-solid fa-globe"></i></a>
